[package]
name = "cairo_planning_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cairo_planning_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }
nalgebra = "0.27"
yaml-rust = "0.4"
optimization_engine = "0.6.0"
ndarray = "0.13.0"
num = "0.2.0"
nlopt = "0.5.1"
time = "0.1"
kdtree = "0.6.0"
vpsearch = "1.3.5"
ndarray-rand = "0.11.0"
rand = "0.7.2"
ncollide2d = "0.19"
ncollide3d = "0.21.0"
path-slash = "0.1.2"
lazy_static = "1.4.0"
